# reverse-proxy

./: .gitignore  README.md  default.conf  docker-compose.yml  docker_stats2csv.sh  main copy.py  main.py  pyproject.toml  requirements.txt
conf/cache/: default.conf
docker/fastapi/: Dockerfile
nginx-sites-enabled/: lb  mygoogle  mynaver
ngrinder-controller/db/: h2.mv.db  h2.trace.db
ngrinder-controller/repos/admin/db/: rep-cache.db  uuid
ngrinder-controller/repos/admin/db/revprops/0/: 0  1
ngrinder-controller/repos/superuser/db/: uuid
ngrinder-controller/repos/superuser/db/revprops/0/: 0  1
ngrinder-controller/repos/system/db/: uuid
ngrinder-controller/repos/system/db/revprops/0/: 0  1
ngrinder-controller/repos/user/db/: uuid
ngrinder-controller/repos/user/db/revprops/0/: 0  1
note/: Numpy-basic.ipynb  Numpy-siljeon.ipynb  choice_perform.csv  docker_stats.csv  docker_stats.ipynb  docker_stats2csv.sh  docker_stats_1.csv  docker_stats_2.csv  docker_stats_3.csv  numpy.csv  numpy_perform.csv  python.csv  yes_numpy.csv  yes_python.csv
pyweb1/: index.html
pyweb2/: index.html
pyweb3/: index.html
pyweb4/: index.html
src/reverse_proxy/: higher_order_fun.py
