[project]
name = "reverse-proxy"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "stundrg", email = "kanghr990106@gmail.com"},
]
dependencies = ["fastapi[standard]>=0.115.8", "jupyterlab>=4.3.5", "pandas>=2.2.3", "matplotlib>=3.10.0"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
